# advent2023

./: aoc.cabal
src/main1/: main1a.hs  main1b.hs
src/main2/: main2a.hs  main2b.hs
